--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
- <head>
-   <meta charset="utf-8">
-   <title>Belajar Git - Project 01</title>
- </head>
- <body>
-   <p>Hello Semua, Saya sedang belajar Git</p>
- </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Belajar Git - Project 01</title>
+</head>
+
+<body>
+  <p>Hello Dunia!, Saya sudah belajar Git</p>
+  <p>Belajar git ternyata cukup menyenangkan</p>
+</body>
+
 </html>
