--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+  <p>Revisi</p>
   <p>Hello Dunia!, Saya sudah belajar Git</p>
   <p>Belajar git ternyata cukup menyenangkan</p>
 </body>
